# django-post_office

./: .gitignore  .travis.yml  AUTHORS.rst  CHANGELOG.md  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: publish.yml  stale.yml  test.yml
post_office/: __init__.py  admin.py  apps.py  backends.py  cache.py  compat.py  connections.py  dblock.py  fields.py  gpg.py  lockfile.py  logutils.py  mail.py  messages.py  models.py  sanitizer.py  settings.py  settingstest.py  signals.py  tasks.py  test_settings.py  test_urls.py  tlds.py  translation.py  utils.py  validators.py  version.py  version.txt  webhook.py
post_office/contrib/backends/: TwilioBackend.py
post_office/contrib/sendgrid/: apps.py  tests.py  urls.py  views.py
post_office/management/commands/: cleanup_mail.py  dblocks.py  load_email_template.py  resume_email_delivery.py  retry_failed.py  send_mail.py  send_queued_mail.py  suspend_email_delivery.py
post_office/migrations/: 0001_initial.py  0002_add_i18n_and_backend_alias.py  0002_auto__chg_field_emailtemplate_last_updated__chg_field_emailtemplate_cr.py  0002_email_backend_alias.py  0002_internationalization.py  0003_auto_20150706_0414.py  0003_auto_20151105_1453.py  0003_auto__add_field_emailtemplate_headers__add_field_email_headers.py  0003_auto__add_field_emailtemplate_language__add_unique_emailtemplate_name_.py  0003_longer_subject.py  0004_auto_20160607_0901.py  0004_auto__add_field_email_scheduled_at__chg_field_email_headers.py  0004_remove_choices_from_language.py  0004_remove_language_choices.py  0005_auto_20160512_1306.py  0005_auto_20170515_0013.py  0005_auto__add_attachment.py  0005_auto__add_field_emailtemplate_description.py  0006_attachment_mimetype.py  0006_auto__add_field_emailtemplate_description.py  0007_auto_20170731_1342.py  0007_auto__add_field_email_template__add_field_email_context.py  0008_attachment_headers.py  0009_auto_20200330_1434.py  0009_auto__add_field_email_cc__add_field_email_bcc__chg_field_email_to.py  0009_requeued_mode.py  0010_add_emailtemplate_label.py  0010_attachment_headers.py  0010_auto_20200723_1131.py  0010_message_id.py  0011_models_help_text.py  0012_add_example_context.py  0012_alter_attachment_id_alter_email_id_and_more.py  0012_alter_email_status.py  0012_dbmutex.py  0012_email_metadata.py  0012_jsonfield.py  0013_email_recipient_delivery_status_and_more.py  0013_emailtemplate_post_office_name_74d644_idx_and_more.py  0014_alter_attachment_headers_alter_email_context_and_more.py  (+1 more)
post_office/routers/: base.py  sms.py
post_office/south_migrations/: 0003_auto__add_field_email_headers.py  0005_auto__add_attachment.py  0007_auto__add_field_email_template__add_field_email_context.py  0008_auto__del_index_log_date__del_index_log_status__del_index_email_priori.py  0010_auto__add_field_log_exception_type.py  0011_auto__chg_field_email_context.py  0012_auto__add_field_email_embedded_image.py  0012_auto__add_translatedemailtemplate__add_unique_translatedemailtemplate_.py  0012_internationalization.py  0013_auto__add_field_email_backend_alias.py  0014_auto__chg_field_email_subject.py
post_office/template/: __init__.py
post_office/template/backends/: html_email.py  post_office.py
post_office/templatetags/: html_email.py  post_office.py
post_office/tests/: __init__.py  backends.py  cache.py  commands.py  lockfile.py  mail.py  models.py  runtests.py  test_admin.py  test_backends.py  test_cache.py  test_commands.py  test_connections.py  test_dblock.py  test_forms.py  test_html_email.py  test_lockfile.py  test_mail.py  test_models.py  test_settings.py  test_storage_settings.py  test_utils.py  test_views.py  test_webhook.py  utils.py  views.py
post_office/tests/routers/: test_sms.py
tests/: test_admin.py  test_backends.py  test_cache.py  test_commands.py  test_connections.py  test_forms.py  test_html_email.py  test_lockfile.py  test_mail.py  test_models.py  test_settings.py  test_storage_settings.py  test_webhooks.py  test_webhooks_ses.py  test_webhooks_sparkpost.py
(+18 files in other folders)
