[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "django-post_office"
license = "MIT"
requires-python = ">=3.9"
authors = [{name = "Selwin Ong", email = "selwin.ong@gmail.com"}]
description = "A Django app to monitor and send mail asynchronously, complete with template support."
urls = {Homepage = "https://github.com/ui/django-post_office"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Communications :: Email",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "nh3",
    "django>=4.2",
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-django",
    "tox >= 2.3",
]

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
include = [
    "post_office",
    "post_office.*",
    "post_office_attachments",
    "post_office_attachments.*",
]

[tool.setuptools.dynamic]
version = {attr = "post_office.version.VERSION"}

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py39"
exclude = [
    "migrations",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.test_settings"
pythonpath = ["."]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
